Apply OpenRewrite changes.